--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,12 @@ html,body {
     background-repeat: space;
   }
 
+
   h1, h2 {
-    font-family: 'Press Start 2P', monospace;
-    /* font-family: monospace; */
-    color: goldenrod;
+    /* font-family: 'Press Start 2P', monospace; */
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    font-size: 30px
   }
 
   canvas {
@@ -29,7 +31,7 @@ html,body {
   #container {
   max-width: 50em;
   /* height: 70vh; */
-  background-color: rgb(111, 12, 32);
+  background-color: lightgreen;
   margin: 0 auto;
   padding: 1em;
   display: grid;
@@ -72,3 +74,78 @@ html,body {
     grid-area: btm-right;
     /* background-color: #222; */
   }
+
+
+
+  /* html,body {
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    padding-top: 1em;
+    text-align: center;
+    background-color: black;
+
+    background-size: cover;
+    background-repeat: space;
+  }
+
+  h1, h2 {
+    font-family: 'Press Start 2P', monospace;
+
+    color: goldenrod;
+  }
+
+  canvas {
+
+    background-color: #222;
+    width: 100%;
+    height: 100;
+  }
+
+  #container {
+  max-width: 50em;
+
+  background-color: rgb(111, 12, 32);
+  margin: 0 auto;
+  padding: 1em;
+  display: grid;
+  grid-gap: 1em;
+  grid-template-rows: .25fr .5fr .25fr;
+  grid-template-columns: .25fr .5fr .25fr;
+  grid-template-areas: "top-left top-left top-right"
+                        "game game game"
+                        "btm-left btm-right btm-right";
+  }
+
+  #top-left, #top-right, #btm-left, #btm-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #222;
+  }
+
+  #top-left {
+    grid-area: top-left;
+  }
+
+  #top-right {
+    grid-area: top-right;
+
+  }
+
+  main {
+    grid-area: game;
+  }
+
+
+  #btm-left {
+    grid-area: btm-left;
+
+  }
+
+  #btm-right {
+    grid-area: btm-right;
+
+  } */
