--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,11 @@ html,body {
   }
 
 
+
+
   h1, h2 {
     /* font-family: 'Press Start 2P', monospace; */
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'MedievalSharp';font-size: 22px;
     color: white;
     font-size: 30px
   }
@@ -24,6 +26,8 @@ html,body {
     /* background-image: url('../img/stone.png'); */
     /* background-repeat: repeat; */
     background-color: #222;
+    /* background-image: url('../images/p.jpeg'); */
+    background-size: cover;
     width: 100%;
     height: 100;
   }
