--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ html,body {
     padding-top: 1em;
     text-align: center;
     background-color: black;
-    /* background-image: url('../img/dungeonhell.png'); */
     background-size: cover;
     background-repeat: space;
   }
@@ -16,25 +15,24 @@ html,body {
 
 
   h1, h2 {
-    /* font-family: 'Press Start 2P', monospace; */
-    font-family: 'MedievalSharp';font-size: 22px;
+
+    font-family: 'MedievalSharp';
     color: white;
-    font-size: 30px
+    font-size: 38px
   }
 
   canvas {
-    /* background-image: url('../img/stone.png'); */
-    /* background-repeat: repeat; */
+
     background-color: #222;
-    /* background-image: url('../images/p.jpeg'); */
+    background-image: url('../images/images-7.jpeg');
     background-size: cover;
     width: 100%;
-    height: 100;
+    height: 100%;
   }
 
   #container {
-  max-width: 50em;
-  /* height: 70vh; */
+  max-width: 60em;
+
   background-color: lightgreen;
   margin: 0 auto;
   padding: 1em;
@@ -51,7 +49,7 @@ html,body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #222;
+    background-color: darkslategrey;
   }
 
   #top-left {
@@ -60,8 +58,7 @@ html,body {
 
   #top-right {
     grid-area: top-right;
-    /* background-color: #222; */
-    /* background-image: url('../img/funky-lines.png'); */
+
   }
 
   main {
@@ -71,12 +68,12 @@ html,body {
 
   #btm-left {
     grid-area: btm-left;
-    /* background-color: #222; */
+
   }
 
   #btm-right {
     grid-area: btm-right;
-    /* background-color: #222; */
+
   }
 
 
